fixed the comments section from showing after refresh on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,7 +17,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 1.5rem 1rem;
+	padding: 0.8rem 0.8rem;
 	border-radius: 8px;
 	margin: 2rem 0;
 	position: relative;
@@ -43,7 +43,7 @@
 	flex-direction: column;
 	background-color: var(--shaded-clr);
 	padding: 0.5rem;
-	margin: 0.8rem;
+	margin: 0.9rem auto;
 	border-radius: 8px;
 	justify-content: center;
 	align-items: center;
@@ -100,6 +100,7 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
+		justify-content: center;
 		position: relative;
 	}
 
